@@ -1,3 +1,11 @@
+2006-09-05  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/basic_string.tcc (find(const _CharT*, size_type,
+	size_type)): Reimplement in terms of traits::eq and traits::compare.
+	* include/ext/vstring.tcc (find(const _CharT*, size_type,
+	size_type)): Likewise.
+	* src/string-inst.cc: Remove unneded std::search instantiation.
+
 2006-09-04  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR c++/28871
